name:                TwosGame
version:             0.1.0.0
synopsis:            Game where you slide powers of two around merging matches
-- description:         
homepage:            http://github.com/glguy/TwosGame
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2014 Eric Mertens
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable TwosGame
  main-is:             Main.hs
  other-extensions:    PackageImports, TemplateHaskell
  build-depends:       base >=4.6 && <4.9,
                       terminfo >= 0.3,
                       lens     >= 4.0.7,
                       machines >= 0.2.5,
                       random   >= 1.0,
                       transformers >= 0.3

  default-language:    Haskell2010
